Refactor get_latest_block to get_block_number
